third_party/move/move-compiler-v2/tests/op-equal/invalid2.exp

Diagnostics:
error: cannot use `bool` with an operator which expects a value of type `integer`
  ┌─ tests/op-equal/invalid2.move:4:9
  │
4 │         x += 1;
  │         ^

error: cannot use `bool` with an operator which expects a value of type `integer`
  ┌─ tests/op-equal/invalid2.move:9:9
  │
9 │         x += true;
  │         ^
